# dev-skillbox-module25

Task#1/: CMakeLists.txt
Task#1/include/: tool_functions.h
Task#1/src/: CMakeLists.txt  main.cpp  tool_functions.cpp
Task#2/: CMakeLists.txt
Task#2/include/: cpu.h  disk.h  gpu.h  kbd.h  ram.h
Task#2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp
